--- a/style.css
+++ b/style.css
@@ -20,22 +20,22 @@ display: flex;
 
 .box {
 height: 100px;
-min-width: 320px;
+width: 320px;
 
 
 }
 
 .one{
 background: red;
-flex-shrink: 3;
+flex-shrink: 5;
 }
 
 .two{
     background: blue;
-
+    flex-shrink: 2;
 }
 
 .three{
 background: green;
-
+flex-shrink: 1;
 }
