--- a/example-1/style.css
+++ b/example-1/style.css
@@ -33,11 +33,28 @@ text-align: center;
 color: #fff;
 display: block;
 padding: 10px;
-
+background-color: #777;
 }
 
 nav a:hover{
 background-color: #555;
 
 }
+
+
+
 /* flex styles */
+
+@media screen and (min-width: 768px) {
+
+nav ul{
+    display: flex;
+    justify-content: space-between;
+}
+    
+ nav li{
+     //flex: 1 1 0;
+ }   
+    
+    
+    }
