--- a/style.css
+++ b/style.css
@@ -18,13 +18,15 @@ display: flex;
 background: #ffff;
 flex-wrap: wrap;
 flex-flow: column;
-justify-content: flex-start;
-height: 800px;
+height: 600px;
+align-items: center;
+
+
 
 }
 
 .box {
-height: 100px;
+width: 100px;
 flex: 0 0 100px;
 
 
