--- a/style.css
+++ b/style.css
@@ -1,49 +1,33 @@
-*{
-    font-family: verdana;
-    margin: 0;
-}
 
 body{
     background: #eee;
+    color: #333;
 }
 
 .wrapper{
     width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
+    max-width: 960px;
 }
 
-.flex-container{
+#blocks{
 display: flex;
-background: #ffff;
-flex-wrap: wrap;
-flex-flow: column;
-height: 600px;
-align-items: center;
-justify-content: center;
+margin: 10px;
+justify-content: space-between;
 
 
 
 }
 
-.box {
-width: 100px;
+#blocks div{
 flex: 0 0 100px;
-
-
-}
-
-.one{
-background: red;
+padding: 40px 0;
+text-align: center;
+background: #ccc;
 
 }
 
-.two{
-background: blue;
- 
-}
 
-.three{
-background: green;
-
-}
+.one{order: 3;}
+.two{order: 2;}
+.three{order: 1;}
+.four{order: 0;}
